# OpenGLExperiment

./: .gitignore  CMakeLists.txt
res/shaders/: basic.frag  basic.vert
src/: camera.cpp  main.cpp  shader.cpp  util.cpp
